// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataGrid tests render should render data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DataGrid
    data={
      Array [
        Object {
          "email": "dongnong@nowhere.com",
          "key": "123",
          "name": "Dong Nong",
        },
        Object {
          "email": "juckgruck@nowhere.com",
          "key": "321",
          "name": "Juck Gruck",
        },
      ]
    }
    loading={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <table>
        <thead>
          <tr>
            <th>
              NAME
            </th>
            <th>
              EMAIL
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Dong Nong
            </td>
            <td>
              dongnong@nowhere.com
            </td>
          </tr>
          <tr>
            <td>
              Juck Gruck
            </td>
            <td>
              juckgruck@nowhere.com
            </td>
          </tr>
        </tbody>
      </table>,
      "className": "panel datagrid",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <thead>
            <tr>
              <th>
                NAME
              </th>
              <th>
                EMAIL
              </th>
            </tr>
          </thead>,
          <tbody>
            <tr>
              <td>
                Dong Nong
              </td>
              <td>
                dongnong@nowhere.com
              </td>
            </tr>
            <tr>
              <td>
                Juck Gruck
              </td>
              <td>
                juckgruck@nowhere.com
              </td>
            </tr>
          </tbody>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <tr>
              <th>
                NAME
              </th>
              <th>
                EMAIL
              </th>
            </tr>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <th>
                  NAME
                </th>,
                <th>
                  EMAIL
                </th>,
                null,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "name",
                "nodeType": "host",
                "props": Object {
                  "children": "NAME",
                },
                "ref": null,
                "rendered": "NAME",
                "type": "th",
              },
              Object {
                "instance": null,
                "key": "email",
                "nodeType": "host",
                "props": Object {
                  "children": "EMAIL",
                },
                "ref": null,
                "rendered": "EMAIL",
                "type": "th",
              },
              null,
            ],
            "type": "tr",
          },
          "type": "thead",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <tr>
                <td>
                  Dong Nong
                </td>
                <td>
                  dongnong@nowhere.com
                </td>
              </tr>,
              <tr>
                <td>
                  Juck Gruck
                </td>
                <td>
                  juckgruck@nowhere.com
                </td>
              </tr>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "123",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <td>
                    Dong Nong
                  </td>,
                  <td>
                    dongnong@nowhere.com
                  </td>,
                  null,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "name",
                  "nodeType": "host",
                  "props": Object {
                    "children": "Dong Nong",
                  },
                  "ref": null,
                  "rendered": "Dong Nong",
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": "email",
                  "nodeType": "host",
                  "props": Object {
                    "children": "dongnong@nowhere.com",
                  },
                  "ref": null,
                  "rendered": "dongnong@nowhere.com",
                  "type": "td",
                },
                null,
              ],
              "type": "tr",
            },
            Object {
              "instance": null,
              "key": "321",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <td>
                    Juck Gruck
                  </td>,
                  <td>
                    juckgruck@nowhere.com
                  </td>,
                  null,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "name",
                  "nodeType": "host",
                  "props": Object {
                    "children": "Juck Gruck",
                  },
                  "ref": null,
                  "rendered": "Juck Gruck",
                  "type": "td",
                },
                Object {
                  "instance": null,
                  "key": "email",
                  "nodeType": "host",
                  "props": Object {
                    "children": "juckgruck@nowhere.com",
                  },
                  "ref": null,
                  "rendered": "juckgruck@nowhere.com",
                  "type": "td",
                },
                null,
              ],
              "type": "tr",
            },
          ],
          "type": "tbody",
        },
      ],
      "type": "table",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <table>
          <thead>
            <tr>
              <th>
                NAME
              </th>
              <th>
                EMAIL
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Dong Nong
              </td>
              <td>
                dongnong@nowhere.com
              </td>
            </tr>
            <tr>
              <td>
                Juck Gruck
              </td>
              <td>
                juckgruck@nowhere.com
              </td>
            </tr>
          </tbody>
        </table>,
        "className": "panel datagrid",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <thead>
              <tr>
                <th>
                  NAME
                </th>
                <th>
                  EMAIL
                </th>
              </tr>
            </thead>,
            <tbody>
              <tr>
                <td>
                  Dong Nong
                </td>
                <td>
                  dongnong@nowhere.com
                </td>
              </tr>
              <tr>
                <td>
                  Juck Gruck
                </td>
                <td>
                  juckgruck@nowhere.com
                </td>
              </tr>
            </tbody>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <tr>
                <th>
                  NAME
                </th>
                <th>
                  EMAIL
                </th>
              </tr>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <th>
                    NAME
                  </th>,
                  <th>
                    EMAIL
                  </th>,
                  null,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "name",
                  "nodeType": "host",
                  "props": Object {
                    "children": "NAME",
                  },
                  "ref": null,
                  "rendered": "NAME",
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": "email",
                  "nodeType": "host",
                  "props": Object {
                    "children": "EMAIL",
                  },
                  "ref": null,
                  "rendered": "EMAIL",
                  "type": "th",
                },
                null,
              ],
              "type": "tr",
            },
            "type": "thead",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <tr>
                  <td>
                    Dong Nong
                  </td>
                  <td>
                    dongnong@nowhere.com
                  </td>
                </tr>,
                <tr>
                  <td>
                    Juck Gruck
                  </td>
                  <td>
                    juckgruck@nowhere.com
                  </td>
                </tr>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "123",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <td>
                      Dong Nong
                    </td>,
                    <td>
                      dongnong@nowhere.com
                    </td>,
                    null,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "name",
                    "nodeType": "host",
                    "props": Object {
                      "children": "Dong Nong",
                    },
                    "ref": null,
                    "rendered": "Dong Nong",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "email",
                    "nodeType": "host",
                    "props": Object {
                      "children": "dongnong@nowhere.com",
                    },
                    "ref": null,
                    "rendered": "dongnong@nowhere.com",
                    "type": "td",
                  },
                  null,
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": "321",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <td>
                      Juck Gruck
                    </td>,
                    <td>
                      juckgruck@nowhere.com
                    </td>,
                    null,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "name",
                    "nodeType": "host",
                    "props": Object {
                      "children": "Juck Gruck",
                    },
                    "ref": null,
                    "rendered": "Juck Gruck",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "email",
                    "nodeType": "host",
                    "props": Object {
                      "children": "juckgruck@nowhere.com",
                    },
                    "ref": null,
                    "rendered": "juckgruck@nowhere.com",
                    "type": "td",
                  },
                  null,
                ],
                "type": "tr",
              },
            ],
            "type": "tbody",
          },
        ],
        "type": "table",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DataGrid tests render should render loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DataGrid
    data={
      Array [
        Object {
          "email": "dongnong@nowhere.com",
          "key": "123",
          "name": "Dong Nong",
        },
        Object {
          "email": "juckgruck@nowhere.com",
          "key": "321",
          "name": "Juck Gruck",
        },
      ]
    }
    loading={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Loading
        content="Loading..."
        kind="primary"
        size="medium"
      />,
      "className": "panel datagrid",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "content": "Loading...",
        "kind": "primary",
        "size": "medium",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Loading
          content="Loading..."
          kind="primary"
          size="medium"
        />,
        "className": "panel datagrid",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "content": "Loading...",
          "kind": "primary",
          "size": "medium",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
